--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^10.7.2",
     "element-plus": "^2.5.6",
     "pinia": "^2.1.7",
+    "uuid": "^9.0.1",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -23,6 +24,7 @@
     "@antfu/eslint-config": "^2.6.3",
     "@iconify-json/carbon": "^1.1.28",
     "@types/node": "^20.11.5",
+    "@types/uuid": "^9.0.8",
     "@unocss/eslint-config": "^0.58.3",
     "@unocss/eslint-plugin": "^0.58.3",
     "@unocss/reset": "^0.58.3",
