--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
     "@iconify-json/carbon": "^1.1.28",
+    "@iconify-json/ic": "^1.1.17",
     "@types/node": "^20.11.5",
     "@types/uuid": "^9.0.8",
     "@unocss/eslint-config": "^0.58.3",
