--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^2.6.3",
     "@iconify-json/carbon": "^1.1.28",
+    "@iconify-json/ci": "^1.1.13",
     "@iconify-json/ic": "^1.1.17",
     "@iconify-json/radix-icons": "^1.1.14",
     "@types/node": "^20.11.5",
